--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
+@font-face {
+    font-family: "a";
+    src: url("./Vanguard_CF.ttf");
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: vanguard cf;
+    font-family: a;
 }
+
 html , body{
     height: 100%;
     width: 100%;
 }
+
 #loader{
     display: flex;
     height: 100%;
@@ -15,17 +22,16 @@ html , body{
     align-items: center;
     justify-content: center;
     background-color: #3d3d3d;
-    /* text-align: center; */
 }
+
 h1{
     font-size: 10vw;
     font-weight: 900;
     color: salmon;
-/* display: none; */
 }
+
 button{
     position: absolute;
-
     top: 80%;
     left: 50%;
     text-align: center;
@@ -41,12 +47,11 @@ button{
     color: #3d3d3d;
     background: linear-gradient(#77AEFF, #6ca0ec);
 }
-button:hover{
-    /* box-shadow: none; */
 
-    
+button:hover{
     box-shadow: -10px 10px 2px rgb(31, 31, 31);
 }
+
 img{
     display: none;
 }
